# secure-mcp-gateway

./: .dockerignore  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  API-Reference.md  CHANGELOG.md  CLA.md  CLAUDE.md  CLI-Commands-Reference.md  CONTRIBUTING.md  Dockerfile  Dockerfile-Base  LICENSE  LICENSE.txt  MANIFEST.in  PLUGIN_SYSTEMS_COMPLETE.md  PLUGIN_SYSTEMS_SUMMARY.md  README.md  README_PYPI.md  TODO  example_enkrypt_mcp_config.json  mcp_gateway_setup.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: AGENT_FRAMEWORK_EVENTS.md  CRUD_OPERATIONS_GUIDE.md  DEVELOPER_GUIDE.md  OAUTH_CONFIGURATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  TELEMETRY_AND_AUDIT_IMPLEMENTATION.md  enkrypt_mcp_gateway_faq.md  hooks-cli.md  mcp_guardrails_comparison_table.md  sandbox_bubblewrap_guide.md  sandbox_walkthrough.md  secure-mcp-gateway-manifest-example.yaml  streaming-guardrails.md
docs/flow/: Enkrypt Secure MCP Gateway Flow.txt
enkrypt-in-agent-sdk/: .env.example  README.md  pyproject.toml
enkrypt-in-agent-sdk/docs/frameworks/: README.md  anthropic.md  autogen.md  bedrock-agents.md  crewai.md  generic.md  google-adk.md  haystack.md  langchain.md  langgraph.md  llamaindex.md  openai-agents.md  phidata.md  pydantic-ai.md  semantic-kernel.md  smolagents.md
enkrypt-in-agent-sdk/examples/: _env_setup.py  demo.py
enkrypt-in-agent-sdk/examples/anthropic/: real_test.py
enkrypt-in-agent-sdk/examples/autogen/: real_test.py
enkrypt-in-agent-sdk/examples/bedrock_agents/: real_test.py
enkrypt-in-agent-sdk/examples/crewai/: real_test.py
enkrypt-in-agent-sdk/examples/generic/: real_test.py
enkrypt-in-agent-sdk/examples/google_adk/: real_test.py
enkrypt-in-agent-sdk/examples/haystack/: real_test.py
enkrypt-in-agent-sdk/examples/langchain/: real_test.py
enkrypt-in-agent-sdk/examples/langgraph/: real_test.py
enkrypt-in-agent-sdk/examples/llamaindex/: real_test.py
enkrypt-in-agent-sdk/examples/openai_agents/: real_test.py
enkrypt-in-agent-sdk/examples/phidata/: real_test.py
enkrypt-in-agent-sdk/examples/pydantic_ai/: real_test.py
enkrypt-in-agent-sdk/examples/semantic_kernel/: real_test.py
enkrypt-in-agent-sdk/examples/smolagents/: real_test.py
enkrypt-in-agent-sdk/src/enkrypt_agent_sdk/: __init__.py  _state.py  auto.py  config.py  encoding.py  events.py  guard.py  observer.py  otel_setup.py  redaction.py
enkrypt-in-agent-sdk/src/enkrypt_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
enkrypt-in-agent-sdk/src/enkrypt_agent_sdk/_patch/: _checkpoint.py  anthropic.py  autogen.py  bedrock_agents.py  crewai.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
enkrypt-in-agent-sdk/src/enkrypt_agent_sdk/adapters/: __init__.py  anthropic.py  autogen.py  bedrock_agents.py  crewai.py  generic.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
enkrypt-in-agent-sdk/src/enkrypt_agent_sdk/guardrails/: __init__.py  base.py  enkrypt_provider.py  keyword_provider.py
enkrypt-in-agent-sdk/tests/: test_auto.py  test_compliance.py  test_encoding.py  test_events.py  test_generic_adapter.py  test_guard.py  test_observer.py  test_redaction.py
examples/sdk/: _env_setup.py  demo.py
examples/streaming/: streaming_guardrails_demo.py  streaming_guardrails_demo_curl.py
hooks/claude/: .gitignore  README.md  settings_example.json
hooks/claude_code/: .gitignore  README.md  settings_example.json
hooks/copilot/: .gitignore  README.md  Untitled  hooks_example.json
hooks/crewai/: README.md
hooks/cursor/: README.md  hooks.json  hooks_example.json
hooks/kiro/: .gitignore  README.md  kiro_hooks_example.json
hooks/langchain/: .gitignore  README.md  enkrypt_guardrails.py  enkrypt_guardrails_handler.py  guardrails_config_example.json  requirements.txt
hooks/langgraph/: .gitignore  README.md  enkrypt_guardrails.py  enkrypt_guardrails_hook.py  guardrails_config_example.json  requirements.txt
hooks/openai/: README.md  enkrypt_guardrails.py  enkrypt_guardrails_hook.py  guardrails_config_example.json  requirements.txt
hooks/strands/: README.md  enkrypt_guardrails.py  enkrypt_guardrails_hook.py  guardrails_config_example.json  requirements.txt
hooks/vercel-ai-sdk/: .gitignore  README.md  guardrails-config.example.json
infra/: docker-compose.yml
infra/otel_collector/: otel-collector-config.yaml
observability/: docker-compose.yml
observability/loki/: loki-config.yaml
observability/promtail/: promtail-config.yaml
relay_service/: Dockerfile  app.py
scripts/: install.bat  install.sh  setup.bat  setup.sh  test_browser_authorization.py
scripts/flake8/: clean_blank_lines.py  remove_trailing_whitespace.py  remove_useless_fstrings.py
scripts/pre_commit/: check_ast.py  check_case_conflict.py  check_debug_statements.py  check_json.py  check_large_files.py  check_merge_conflict.py  check_test_names.py  check_toml.py  check_yaml.py  end_of_file_fixer.py
src/: client.py  gateway.py  guardrail.py  utils.py
src/enkrypt_security/: __init__.py  example_enkrypt_config.json
src/enkryptai_agent_security/: __init__.py  example_enkrypt_config.json
src/secure_mcp_gateway/: __init__.py  api.py  api_health_routes.py  api_models.py  audit.py  (+20 more)
tests/: Dockerfile.sandbox-test  api-test.html  api_reference.txt  bwrap_test_config.json  debug_venv.py  reference.txt  run_echo_http.py  sandbox_all_results.json  sandbox_comparison_results.json  setup_bwrap_gw.sh  test_all_commands.py  test_bwrap_gateway.py  test_bwrap_gateway.sh  test_bwrap_list_tools.py  test_bwrap_manual.sh  test_bwrap_mcp.sh  test_bwrap_npx.sh  test_bwrap_npx_offline.sh  test_bwrap_playwright.py  test_bwrap_playwright.sh  test_bwrap_screenshot.py  test_gateway.py  test_logging.py  test_runsc.sh  test_sandbox_all.py  test_sandbox_providers.py  test_sandbox_quick.py  test_session_pool.py  test_srt.sh  test_version.py
(+615 files in other folders)
