[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enkryptai-agent-security"
version = "0.1.0"
description = "Enkrypt AI unified security library — guardrails, config, telemetry, MCP gateway, agent SDK, and hooks."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Enkrypt AI Team", email = "support@enkryptai.com" }
]
keywords = [
    "ai", "security", "guardrails", "opentelemetry", "mcp",
    "enkrypt", "pii", "toxicity", "injection", "gateway",
    "agents", "middleware", "model context protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

# Zero core dependencies — guardrail client uses urllib (stdlib)
dependencies = []

[project.optional-dependencies]
# MCP Gateway (full server)
gateway = [
    "flask~=3.1.2",
    "flask-cors~=6.0.1",
    "redis~=6.4.0",
    "requests~=2.32.5",
    "aiohttp~=3.12.15",
    "fastapi~=0.115.6",
    "uvicorn[standard]~=0.32.1",
    "pydantic~=2.11.0",
    "pydantic[email]~=2.11.0",
    "email-validator~=2.2.0",
    "python-json-logger~=3.3.0",
    "python-dateutil~=2.9.0.post0",
    "psutil~=6.1.0",
    "cryptography~=45.0.7",
    "pyjwt~=2.10.1",
    "tenacity~=8.2.0",
    "mcp[cli]~=1.13.1",
    "opentelemetry-sdk~=1.36.0",
    "opentelemetry-exporter-otlp~=1.36.0",
    "opentelemetry-exporter-prometheus~=0.57b0",
    "opentelemetry-instrumentation~=0.57b0",
    "opentelemetry-instrumentation-requests~=0.57b0",
    "structlog~=25.4.0",
]

# Agent SDK (async guardrails + framework adapters)
sdk = ["aiohttp>=3.8.0"]

# Hooks (sync guardrails with requests)
hooks = ["requests>=2.26.0"]

# Hook framework wrappers
hooks-langchain = ["enkryptai-agent-security[hooks]", "langchain-core>=0.1.0"]
hooks-langgraph = ["enkryptai-agent-security[hooks]", "langchain-core>=0.1.0", "langgraph>=0.2.0"]
hooks-openai-agents = ["enkryptai-agent-security[hooks]", "openai-agents>=0.1.0"]
hooks-strands = ["enkryptai-agent-security[hooks]", "strands-agents>=0.1.0"]

# OpenTelemetry tracing + metrics
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

# OpenLLMetry instrumentors (install what you need)
otel-openai = ["opentelemetry-instrumentation-openai>=0.40"]
otel-anthropic = ["opentelemetry-instrumentation-anthropic>=0.40"]
otel-langchain = ["opentelemetry-instrumentation-langchain>=0.40"]

# Structured logging (optional, falls back to stdlib logging)
structlog = ["structlog>=25.4.0"]

# SDK framework-specific extras
langchain = ["langchain-core>=0.1.0", "langchain-openai>=0.1.0"]
openai = ["openai>=1.0.0", "openai-agents>=0.1.0"]
anthropic = ["anthropic>=0.30.0"]
crewai = ["crewai>=0.80.0"]
pydantic-ai = ["pydantic-ai>=0.0.24"]
llamaindex = ["llama-index-core>=0.11.0"]
autogen = ["autogen-agentchat>=0.4.0"]
smolagents = ["smolagents>=1.0.0"]
haystack = ["haystack-ai>=2.0.0"]
semantic-kernel = ["semantic-kernel>=1.0.0"]
google-adk = ["google-adk>=0.1.0"]
phidata = ["phidata>=2.0.0"]
bedrock = ["boto3>=1.34.0"]

# Bundles
all = [
    "enkryptai-agent-security[gateway,sdk,hooks,otel,structlog]",
]
dev = [
    "enkryptai-agent-security[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/enkryptai/secure-mcp-gateway"
Repository = "https://github.com/enkryptai/secure-mcp-gateway"
Issues = "https://github.com/enkryptai/secure-mcp-gateway/issues"

[project.scripts]
enkryptai-agent-security = "enkryptai_agent_security.gateway.cli:main"
secure-mcp-gateway = "enkryptai_agent_security.gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["enkryptai_agent_security*"]

[tool.setuptools.package-data]
"enkryptai_agent_security.gateway" = ["example_*.json", "openapi.json"]

# Ruff configuration
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
    ".secure-mcp-gateway-venv", "docs", "tests", "examples",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "I", "B", "C4", "UP",
    "SIM", "TCH", "TID", "Q", "RUF",
]
ignore = [
    "E501", "B008", "C901", "B904", "E402", "F403", "F401",
    "B007", "SIM102", "F841", "SIM117", "RUF013", "B006",
    "SIM114", "SIM210",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["enkryptai_agent_security"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
