[build-system]
requires = ["setuptools~=82.0.1", "wheel~=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-mcp-gateway"
version = "2.1.8"
description = "Enkrypt AI Secure MCP Gateway — authentication, guardrails, caching, and observability for Model Context Protocol servers."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Enkrypt AI Team", email = "support@enkryptai.com" },
]
keywords = [
    "mcp", "gateway", "secure", "middleware", "model context protocol",
    "guardrails", "enkrypt", "ai", "opentelemetry", "authentication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core
    "flask~=3.1.2",
    "flask-cors~=6.0.1",
    "redis~=6.4.0",
    "requests~=2.32.5",
    "aiohttp~=3.12.15",
    # FastAPI / REST API
    "fastapi~=0.115.6",
    "uvicorn[standard]~=0.32.1",
    "pydantic~=2.11.0",
    "pydantic[email]~=2.11.0",
    "email-validator~=2.2.0",
    # Logging & utilities
    "python-json-logger~=3.3.0",
    "python-dateutil~=2.9.0.post0",
    "psutil~=6.1.0",
    # Security
    "cryptography~=45.0.7",
    "pyjwt~=2.10.1",
    # Retry
    "tenacity~=8.2.0",
    # MCP
    "mcp[cli]~=1.13.1",
    # OpenTelemetry
    "opentelemetry-sdk~=1.36.0",
    "opentelemetry-exporter-otlp~=1.36.0",
    "opentelemetry-exporter-prometheus~=0.57b0",
    "opentelemetry-instrumentation~=0.57b0",
    "opentelemetry-instrumentation-requests~=0.57b0",
    "structlog~=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "ruff~=0.15.9",
    "pre-commit~=4.2.0",
]

[project.urls]
Homepage = "https://github.com/enkryptai/secure-mcp-gateway"
Repository = "https://github.com/enkryptai/secure-mcp-gateway"
Issues = "https://github.com/enkryptai/secure-mcp-gateway/issues"

[project.scripts]
secure-mcp-gateway = "secure_mcp_gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["secure_mcp_gateway*"]

[tool.setuptools.package-data]
secure_mcp_gateway = ["example_*.json", "openapi.json"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
    "docs", "tests", "examples",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "I", "B", "C4", "UP",
    "SIM", "TCH", "TID", "Q", "RUF",
]
ignore = [
    "E501", "B008", "C901", "B904", "E402", "F403", "F401",
    "B007", "SIM102", "F841", "SIM117", "RUF013", "B006",
    "SIM114", "SIM210",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["secure_mcp_gateway"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require external API keys or running services",
]
