[build-system]
requires = ["setuptools~=82.0.1", "wheel~=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-mcp-gateway"
version = "2.1.8"
description = "Enkrypt AI Secure MCP Gateway — authentication, guardrails, caching, and observability for Model Context Protocol servers."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Enkrypt AI Team", email = "support@enkryptai.com" },
]
keywords = [
    "mcp", "gateway", "secure", "middleware", "model context protocol",
    "guardrails", "enkrypt", "ai", "opentelemetry", "authentication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core
    "flask~=3.1.3",
    "flask-cors~=6.0.2",
    "redis~=7.4.0",
    "requests~=2.33.1",
    "aiohttp~=3.13.5",
    # FastAPI / REST API
    "fastapi~=0.135.3",
    "uvicorn[standard]~=0.44.0",
    "pydantic~=2.12.5",
    "pydantic[email]~=2.12.5",
    "email-validator~=2.3.0",
    # Logging & utilities
    "python-dateutil~=2.9.0.post0",
    "psutil~=7.2.2",
    # Security
    "cryptography~=46.0.7",
    "pyjwt~=2.12.1",
    # Retry
    "tenacity~=9.1.4",
    # MCP
    "mcp[cli]~=1.27.0",
    # OpenTelemetry
    "opentelemetry-sdk~=1.40.0",
    "opentelemetry-exporter-otlp~=1.40.0",
    "opentelemetry-exporter-prometheus~=0.61b0",
    "opentelemetry-instrumentation~=0.61b0",
    "opentelemetry-instrumentation-requests~=0.61b0",
    "structlog~=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "ruff~=0.15.9",
    "pre-commit~=4.5.1",
]

[project.urls]
Homepage = "https://github.com/enkryptai/secure-mcp-gateway"
Repository = "https://github.com/enkryptai/secure-mcp-gateway"
Issues = "https://github.com/enkryptai/secure-mcp-gateway/issues"

[project.scripts]
secure-mcp-gateway = "secure_mcp_gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["secure_mcp_gateway*"]

[tool.setuptools.package-data]
secure_mcp_gateway = ["example_*.json", "openapi.json"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
    "docs", "tests", "examples",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "I", "B", "C4", "UP",
    "SIM", "TCH", "TID", "Q", "RUF",
]
ignore = [
    "E501", "B008", "C901", "B904", "E402", "F403", "F401",
    "B007", "SIM102", "F841", "SIM117", "RUF013", "B006",
    "SIM114", "SIM210",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["secure_mcp_gateway"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require external API keys or running services",
]
